# format-blocks

./: .gitignore  LICENSE  README.md  format.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.sh  ci.yml
format_blocks/: __init__.py  base.py  blocks.py  extras.py  support.py
tests/: test_blocks.py  test_example.py
