[tool.poetry]
name = "format-blocks"
version = "0.1.0"
description = "A library for building code formatters"
authors = ["Joseph Atkins-Turkish <@spacerat>"]
include = ["format_blocks/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.5.2"
autoflake = "^1.4"
mypy = "^0.782"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
